--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,3 +1,16 @@
-region       = "us-east-1"
+# Example Terraform Variables
+# Copy this file to terraform.tfvars and update with your values
+
+project_name = "my-project"
 environment  = "dev"
-project_name = "security-information-event-management"
+region       = "us-east-1"
+
+# VPC Configuration
+vpc_cidr = "10.0.0.0/16"
+azs      = ["us-east-1a", "us-east-1b"]
+
+# Compute Configuration
+instance_type = "t3.micro"
+
+# Monitoring Configuration
+alert_email = "devops@example.com"
